--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="qh9s4OMKyNdKD3SJGr2ZYO776TZj7bAqkFtRrRAkBC8" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>How to Watch NFL, NBA, and More Using the Fubo Free Trial?</title>
@@ -255,7 +256,7 @@
 
       <h2>How to Make the Most of Your Trial</h2>
       <p>
-        To fully benefit from your fubo tv free trial, it's best to plan ahead. Check the schedule of upcoming NFL or NBA games and align your trial with those dates. Explore the platform's features like DVR recording, simultaneous streaming, and on-demand replays. This will help you understand the full value of the subscription should you choose to continue after the trial.
+        To fully benefit from your <a href="https://freetrialfubotv.pages.dev/">fubo tv free trial</a>, it's best to plan ahead. Check the schedule of upcoming NFL or NBA games and align your trial with those dates. Explore the platform's features like DVR recording, simultaneous streaming, and on-demand replays. This will help you understand the full value of the subscription should you choose to continue after the trial.
       </p>
 
       <p>
