--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <body>
 
   <header>
-    <div class="logo">MyStreamingGuide</div>
+    <div class="logo">Fubo TV</div>
   </header>
   <section class="hero">
     <h1>How to Watch NFL, NBA, and More Using the Fubo Free Trial?</h1>
